--- a/src/main/webapp/assets/styles/variables/bsp-gallery-fullscreen.less
+++ b/src/main/webapp/assets/styles/variables/bsp-gallery-fullscreen.less
@@ -3,7 +3,6 @@
 @bsp-carousel-gallery-fullscreen-body: @white;
 @bsp-carousel-gallery-fullscreen-border-color: @brand-accent;
 @bsp-carousel-gallery-fullscreen-color: @brand-dark;
-@bsp-carousel-gallery-fullscreen-overlays-z-index: 1;
 @bsp-carousel-gallery-fullscreen-nav-button-size: 40px;
 
 // these are variables because of our undesirable/unavoidable use 
